# baohegui

./: .dockerignore  .env.prod.example  .gitignore  AGENTS.md  README.md  auto-test-full.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.bak  init-letsencrypt.sh  minio.license  start.sh  start_bg.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-railway.txt  requirements-vercel.txt  requirements.txt
backend/api/: index.py
backend/app/: main.py
backend/app/api/: admin.py  announcements.py  auth.py  categories.py  check.py  crawler.py  knowledge_graph.py  member.py  report.py  rules.py  stats.py  upload.py
backend/app/core/: audit.py  config.py  security.py
backend/app/db/: database.py
backend/app/engine/: fusion.py  llm_engine.py  parameter_bias.py  platform_rules.py  routing.py  rule_engine.py  semantic_chunking.py  shared_types.py  template_fingerprint.py  variable_marker.py
backend/app/models/: __init__.py  announcement.py  complaint_case.py  document.py  knowledge_graph.py  rule.py  subscription.py  user.py
backend/rules/: compliance_rules.json  forbidden_words.json  parameter_bias_rules.json  platform_rules.json  project_categories.json
backend/tests/: conftest.py  test_api_auth.py  test_check_flow.py  test_e2e.py  test_feedback.py  test_fusion.py  test_knowledge_graph.py  test_llm_engine.py  test_llm_integration.py  test_parameter_bias.py  test_parser.py  test_quota.py  test_report.py  test_routing.py  test_rule_engine.py  test_rules_admin.py  test_semantic_chunking.py
(+137 files in other folders)
