[project]
name = "baohegui-backend"
version = "0.1.0"
description = "包合规 - 招标文件发布前合规自检系统后端"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-multipart>=0.0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.2",
    "python-dotenv>=1.0",
    "spacy>=3.8",
    "PyMuPDF>=1.25",
    "python-docx>=1.1",
    "WeasyPrint>=63",
    "boto3>=1.36",
    "httpx>=0.28",
    "jinja2>=3.1",
    "alembic>=1.14",
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "minio>=7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.15",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
